# cgviewer

./: .gitignore  CMakeLists.txt  README.md
inc/: CGAL_typedefs.hpp  Consts.hpp  Graphics.hpp  MainWindow.hpp  QDelaunayTriangulationItem.hpp  QPointListItem.hpp  QSegmentListItem.hpp  QTriangulationItem.hpp  Scene.hpp  View.hpp  crust_2.hpp  random_square_2.hpp
src/: CGAL_typedefs.hpp  Graphics.hpp  MainWindow.cpp  MainWindow.hpp  QBetaSkeletonItem.hpp  QCrustItem.hpp  QPointListItem.hpp  QRegularTriangulationItem.hpp  QSegmentListItem.hpp  Scene.cpp  Scene.hpp  View.cpp  View.hpp  beta_skeleton_2.hpp  crust_2.hpp  random_ellipse_2.hpp  random_square_2.hpp
